--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
-node_modules/
-.dist/
-.resource/
+node_modules/*
+dist/
+dist/*/*
+.dist/*
+.resource/*
 .npm-debug.log*
 .yarn-debug.log*
 .yarn-error.log*
