--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .DS_Store
 node_modules/*
+zip/
 release/
 dist/
 dist/*/*
@@ -20,3 +21,5 @@ yarn-error.log
 .*.ntvs*
 .*.njsproj
 .*.sln
+*.zip
+*.log
