--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "net": "^1.0.2",
+    "node-ssh": "^6.0.0",
     "node-uuid": "^1.4.8",
     "printing": "^2.1.0",
     "pug": "^2.0.0-rc.4",
