新增 deploy 部署命令 用例： yarn deploy guiyi 自动生成 贵医大 包 并 同步至 45 服务器

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:guiyi": "npm run build --guiyi",
     "buildNew": "node build-new/build.js",
     "buildNew:": "npm run buildNew",
+    "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
   },
