--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "dayjs": "^1.7.4",
     "deepmerge": "^1.2.0",
     "element-ui": "^1.4.4",
+    "escape-string-regexp": "^2.0.0",
+    "execa": "^2.0.3",
     "glob": "^7.1.2",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "js-model": "^1.5.1",
     "lodash": "^4.17.10",
+    "mem": "^5.1.1",
     "moment": "^2.20.1",
     "net": "^1.0.2",
     "node-ssh": "^6.0.0",
