--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:": "npm run build",
     "build:wuhang": "npm run build --wuhang",
     "build:guiyi": "npm run build --guiyi",
+    "analyz": "npm run build --analyz",
     "buildNew": "node build-new/build.js",
     "buildNew:": "npm run buildNew",
     "deploy": "npm run buildNew",
