--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:": "npm run dev",
     "dev:wuhang": "npm run dev --wuhang",
     "dev:guiyi": "npm run dev --guiyi",
+    "dev:weixian": "npm run dev --weixian",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
