提交产妇分娩登记表

--- a/.babelrc
+++ b/.babelrc
@@ -20,6 +20,13 @@
     "transform-runtime",
     "transform-vue-jsx",
     "transform-class-properties",
+    [
+      "component",
+      {
+        "libraryName": "ecrm-element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]
   ],
   "env": {
     "test": {
