--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^1.0.0-rc.2",
     "dayjs": "^1.7.4",
     "deepmerge": "^1.2.0",
+    "ecrm-element-ui": "^2.9.7",
     "element-ui": "^1.4.4",
     "escape-string-regexp": "^2.0.0",
     "execa": "^2.0.3",
@@ -74,6 +75,7 @@
     "babel-eslint": "^7.1.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^7.1.1",
+    "babel-plugin-component": "^1.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
