产科分娩登记表 调整

--- a/.babelrc
+++ b/.babelrc
@@ -26,7 +26,11 @@
         "libraryName": "ecrm-element-ui",
         "styleLibraryName": "theme-chalk"
       }
-    ]
+    ],
+    ["import", {
+      "libraryName": "view-design",
+      "libraryDirectory": "src/components"
+    }]
   ],
   "env": {
     "test": {
