--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tether": "^1.4.4",
     "throttle-debounce": "^1.0.1",
     "tinyreset": "^1.0.1",
+    "view-design": "^4.0.2",
     "vue-bulma-datepicker": "^1.3.6",
     "vue-contextmenu": "^1.4.8",
     "vue-echarts": "^2.4.1",
@@ -77,6 +78,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^1.1.1",
+    "babel-plugin-import": "^1.12.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
