--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev:guiyi": "npm run dev --guiyi",
     "dev:weixian": "npm run dev --weixian",
     "dev:lingcheng": "npm run dev --lingcheng",
+    "dev:huadu": "npm run dev --huadu",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
