新服务器打包配置&&新增密钥文件

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:guiyi": "npm run dev --guiyi",
     "dev:weixian": "npm run dev --weixian",
     "dev:lingcheng": "npm run dev --lingcheng",
+    "dev:liaocheng": "npm run dev --liaocheng",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -24,6 +25,7 @@
     "buildNew:weixian": "npm run buildNew: weixian",
     "buildNew:lingcheng": "npm run buildNew: lingcheng",
     "buildNew:huadu": "npm run buildNew: huadu",
+    "buildNew:liaocheng": "npm run buildNew: liaocheng",
     "buildNew:wujing": "npm run buildNew: wujing",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
