--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev:liaocheng": "npm run dev --liaocheng",
     "dev:fuyou": "npm run dev --fuyou",
     "dev:zhongshanqi": "npm run dev --zhongshanqi",
+    "dev:hengli": "npm run dev --hengli",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
