横沥打包配置&&中山七开放护嘱单模块

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "buildNew:liaocheng": "npm run buildNew: liaocheng",
     "buildNew:fuyou": "npm run buildNew: fuyou",
     "buildNew:zhongshanqi": "npm run buildNew: zhongshanqi",
+    "buildNew:hengli": "npm run buildNew: hengli",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
