--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tether": "^1.4.4",
     "throttle-debounce": "^1.0.1",
     "tinyreset": "^1.0.1",
+    "umy-ui": "^1.1.6",
     "view-design": "^4.0.2",
     "vue-bulma-datepicker": "^1.3.6",
     "vue-contextmenu": "^1.4.8",
