新增护理记录单10张

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev:fuyou": "npm run dev --fuyou",
     "dev:zhongshanqi": "npm run dev --zhongshanqi",
     "dev:hengli": "npm run dev --hengli",
+    "dev:guizhou": "npm run dev --guizhou",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -33,6 +34,7 @@
     "buildNew:fuyou": "npm run buildNew: fuyou",
     "buildNew:zhongshanqi": "npm run buildNew: zhongshanqi",
     "buildNew:hengli": "npm run buildNew: hengli",
+    "buildNew:guizhou": "npm run buildNew: guizhou",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
@@ -129,7 +131,7 @@
     "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
     "mockjs": "^1.0.1-beta3",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
