--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev:zhongshanqi": "npm run dev --zhongshanqi",
     "dev:hengli": "npm run dev --hengli",
     "dev:guizhou": "npm run dev --guizhou",
+    "dev:shannan": "npm run dev --shannan",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -35,6 +36,7 @@
     "buildNew:zhongshanqi": "npm run buildNew: zhongshanqi",
     "buildNew:hengli": "npm run buildNew: hengli",
     "buildNew:guizhou": "npm run buildNew: guizhou",
+    "buildNew:shannan": "npm run buildNew: shannan",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
