添加南方中西医配置

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev:fuyou": "npm run dev --fuyou",
     "dev:zhongshanqi": "npm run dev --zhongshanqi",
     "dev:hengli": "npm run dev --hengli",
+    "dev:nanfangzhongxiyi": "npm run dev --nanfangzhongxiyi",
     "dev:guizhou": "npm run dev --guizhou",
     "dev:shannan": "npm run dev --shannan",
     "start": "node build/dev-server.js",
@@ -35,6 +36,7 @@
     "buildNew:fuyou": "npm run buildNew: fuyou",
     "buildNew:zhongshanqi": "npm run buildNew: zhongshanqi",
     "buildNew:hengli": "npm run buildNew: hengli",
+    "buildNew:nanfangzhongxiyi": "npm run buildNew: nanfangzhongxiyi",
     "buildNew:guizhou": "npm run buildNew: guizhou",
     "buildNew:shannan": "npm run buildNew: shannan",
     "deploy": "npm run buildNew",
