--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev:nanfangzhongxiyi": "npm run dev --nanfangzhongxiyi",
     "dev:guizhou": "npm run dev --guizhou",
     "dev:shannan": "npm run dev --shannan",
+    "dev:beihairenyi": "npm run dev --beihairenyi",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -39,6 +40,7 @@
     "buildNew:nanfangzhongxiyi": "npm run buildNew: nanfangzhongxiyi",
     "buildNew:guizhou": "npm run buildNew: guizhou",
     "buildNew:shannan": "npm run buildNew: shannan",
+    "buildNew:beihairenyi": "npm run buildNew: beihairenyi",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
