--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "printing": "^2.1.0",
     "pug": "^2.0.0-rc.4",
     "qr-image": "^3.2.0",
+    "qrcodejs2": "0.0.2",
     "quill": "^1.3.7",
     "scrollload": "^3.2.1",
     "socket.io-client": "^2.1.1",
