fix: 北海-病房工作日报界面优化调整

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev:shannan": "npm run dev --shannan",
     "dev:beihairenyi": "npm run dev --beihairenyi",
     "dev:quzhou": "npm run dev --quzhou",
+    "dev:hj": "npm run dev --houjie",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
