--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dev:shannan": "npm run dev --shannan",
     "dev:beihairenyi": "npm run dev --beihairenyi",
     "dev:quzhou": "npm run dev --quzhou",
+    "dev:foshanrenyi": "npm run dev --foshanrenyi",
     "dev:hj": "npm run dev --houjie",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -44,6 +45,7 @@
     "buildNew:shannan": "npm run buildNew: shannan",
     "buildNew:beihairenyi": "npm run buildNew: beihairenyi",
     "buildNew:quzhou": "npm run buildNew: quzhou",
+    "buildNew:foshanrenyi": "npm run buildNew: foshanrenyi",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
