--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:": "npm run dev",
     "dev:wuhang": "npm run dev --wuhang",
     "dev:huadu": "npm run dev --huadu",
+    "dev:xiegang": "npm run dev --xiegang",
     "dev:wujing": "npm run dev --wujing",
     "dev:guiyi": "npm run dev --guiyi",
     "dev:weixian": "npm run dev --weixian",
