fix: 佛山杏坛医院修改

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev:beihairenyi": "npm run dev --beihairenyi",
     "dev:quzhou": "npm run dev --quzhou",
     "dev:foshanrenyi": "npm run dev --foshanrenyi",
+    "dev:fsxt": "npm run dev --fsxt",
     "dev:hj": "npm run dev --houjie",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
@@ -48,6 +49,7 @@
     "buildNew:beihairenyi": "npm run buildNew: beihairenyi",
     "buildNew:quzhou": "npm run buildNew: quzhou",
     "buildNew:foshanrenyi": "npm run buildNew: foshanrenyi",
+    "buildNew:fsxt": "npm run buildNew: fsxt",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
