--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dev:foshanrenyi": "npm run dev --foshanrenyi",
     "dev:fsxt": "npm run dev --fsxt",
     "dev:hj": "npm run dev --houjie",
+    "dev:yangchunzhongyi": "npm run dev --yangchunzhongyi",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -50,6 +51,7 @@
     "buildNew:quzhou": "npm run buildNew: quzhou",
     "buildNew:foshanrenyi": "npm run buildNew: foshanrenyi",
     "buildNew:fsxt": "npm run buildNew: fsxt",
+    "buildNew:yangchunzhongyi": "npm run buildNew: yangchunzhongyi",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
