--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dev:fsxt": "npm run dev --fsxt",
     "dev:hj": "npm run dev --houjie",
     "dev:yangchunzhongyi": "npm run dev --yangchunzhongyi",
+    "dev:whyx": "npm run dev --whyx",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -52,6 +53,7 @@
     "buildNew:foshanrenyi": "npm run buildNew: foshanrenyi",
     "buildNew:fsxt": "npm run buildNew: fsxt",
     "buildNew:yangchunzhongyi": "npm run buildNew: yangchunzhongyi",
+    "buildNew:whyx": "npm run buildNew: whyx",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
