【全/福清】科室缓存问题修复/交班志初改

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev:beihairenyi": "npm run dev --beihairenyi",
     "dev:quzhou": "npm run dev --quzhou",
     "dev:foshanrenyi": "npm run dev --foshanrenyi",
+    "dev:fuqing": "npm run dev --fuqing",
     "dev:fsxt": "npm run dev --fsxt",
     "dev:hj": "npm run dev --houjie",
     "dev:yangchunzhongyi": "npm run dev --yangchunzhongyi",
@@ -51,6 +52,7 @@
     "buildNew:beihairenyi": "npm run buildNew: beihairenyi",
     "buildNew:quzhou": "npm run buildNew: quzhou",
     "buildNew:foshanrenyi": "npm run buildNew: foshanrenyi",
+    "buildNew:fuqing": "npm run buildNew: fuqing",
     "buildNew:fsxt": "npm run buildNew: fsxt",
     "buildNew:yangchunzhongyi": "npm run buildNew: yangchunzhongyi",
     "buildNew:whyx": "npm run buildNew: whyx",
