--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,16 @@
 {
-  "path-intellisense.mappings": {
-    "@": "${workspaceRoot}/src"
+  // "editor.formatOnSave": true,
+  "[html]": {
+    "editor.formatOnSave": true,
   },
-  "stylelint.enable": false,
-  "git.ignoreLimitWarning": true,
-  "editor.formatOnSave": false
+  "[scss]": {
+    "editor.formatOnSave": true,
+  },
+  "[css]": {
+    "editor.formatOnSave": true,
+  },
+  "editor.tabSize": 2,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
