--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,8 @@
 {
-  // "editor.formatOnSave": true,
-  "[html]": {
-    "editor.formatOnSave": true,
+  "path-intellisense.mappings": {
+    "@": "${workspaceRoot}/src"
   },
-  "[scss]": {
-    "editor.formatOnSave": true,
-  },
-  "[css]": {
-    "editor.formatOnSave": true,
-  },
-  "editor.tabSize": 2,
-  "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
-  }
+  "stylelint.enable": false,
+  "git.ignoreLimitWarning": true,
+  "editor.formatOnSave": false
 }
