【警/佛一/江】连线修复/打点修复/交班志修复

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "lzj",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "node build/dev-server.js --max_old_space_size=8192",
     "dev:": "npm run dev",
     "dev:wuhang": "npm run dev --wuhang",
     "dev:huadu": "npm run dev --huadu",
