--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev:whyx": "npm run dev --whyx",
     "dev:whfk": "npm run dev --whfk",
     "dev:sdlj": "npm run dev --sdlj",
+    "dev:lyxrm": "npm run dev --lyxrm",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "build:": "npm run build",
@@ -61,6 +62,7 @@
     "buildNew:whyx": "npm run buildNew: whyx",
     "buildNew:whfk": "npm run buildNew: whfk",
     "buildNew:sdlj": "npm run buildNew: sdlj",
+    "buildNew:lyxrm": "npm run buildNew: lyxrm",
     "deploy": "npm run buildNew",
     "lint": "eslint --ext .js,.vue src",
     "toSvn": "svn commit -m 前端代码更新svn"
